--- a/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
+++ b/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
@@ -10,90 +10,106 @@
 </ng-template>
 
 <!-- Form -->
-<div class="container">
-  <header class="major" align="center">
-    <h2>Nuevo Movimiento</h2>
-  </header>
-  <div class="row">
-    <div class="col-md-6">
-      <form #form="ngForm" method="post" novalidate>
+<div class="col-12 pl-0 pr-0 formNewEdit">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form class="pt-4 pr-3 pl-3" #form="ngForm" method="post" novalidate>
 
-        <div class="form-group">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Monto:</label>
-          <input #cashFlowAmount="ngModel" required type="number" class="form-control" [class.is-invalid]="cashFlowAmount.invalid && (cashFlowAmount.dirty || cashFlowAmount.touched)" name="cashFlowAmount" 
-                id="cashFlowAmount" [(ngModel)]="newCashFlow.totalAmount">
         </div>
-
-        <div *ngIf="cashFlowAmount.invalid && (cashFlowAmount.dirty || cashFlowAmount.touched)" class="alert alert-danger">
-          El monto es un campo es requerido.
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <i class="fa fa-dollar prefix"></i>
+          <input #cashFlowAmount="ngModel" required type="number" class="form-control" [class.is-invalid]="cashFlowAmount.invalid && (cashFlowAmount.dirty || cashFlowAmount.touched)"
+            name="cashFlowAmount" id="cashFlowAmount" [(ngModel)]="newCashFlow.totalAmount">
         </div>
-
-        <div class="form-group" [class.has-error]="showMessageCashRegister" *ngIf="lengthCashRegister === true">
-            <label>Caja:</label>
-            <div class="select-wrapper">
-              <select #cashFlowCashRegister="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessageCashRegister" name="cashFlowCashRegister" 
-                (blur)="validateCashRegister(cashFlowCashRegister.value)"
-                (change)="validateCashRegister(cashFlowCashRegister.value)"
-                id="cashFlowCashRegister" [(ngModel)]="newCashFlow.cashRegisterId">
-                <option value="default" default>Seleccione la caja...</option>
-                <option [value]="cashRegister._id" *ngFor = 'let cashRegister of cashRegisters'>{{ cashRegister.name }}</option>
-              </select>
-            </div>
-        </div>
-
-        <div *ngIf="showMessageCashRegister" class="alert alert-danger">
-          La Caja del Movimiento es requerida.
-        </div>
-
-        <div class="form-group" [class.has-error]="showMessageType">
-            <label>Tipo:</label>
-            <div class="select-wrapper">
-              <select #cashFlowType="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessageType" name="cashFlowType" 
-                (blur)="validateType(cashFlowType.value)"
-                (change)="validateType(cashFlowType.value)"
-                id="cashFlowType" [(ngModel)]="newCashFlow.type">
-                <option value="default" default>Seleccione el tipo...</option>
-                <option *ngFor = 'let type of typesArray'>{{ type }}</option>
-              </select>
-            </div>
-        </div>
-
-        <div *ngIf="showMessageType" class="alert alert-danger">
-          El Tipo de Movimiento es requerido.
-        </div> 
-        
-        <div class="form-group" [class.has-error]="showMessagePaymentType">
-            <label>Tipo de Pago:</label>
-            <div class="select-wrapper">
-              <select #cashFlowPaymentType="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessagePaymentType" name="cashFlowPaymentType" 
-                (blur)="validatePaymentType(cashFlowPaymentType.value)"
-                (change)="validatePaymentType(cashFlowPaymentType.value)"
-                id="cashFlowPaymentType" [(ngModel)]="newCashFlow.paymentType">
-                <option value="default" default>Seleccione el tipo de pago...</option>
-                <option [value]="paymentType._id" *ngFor = 'let paymentType of paymentTypes'>{{ paymentType.name }}</option>
-              </select>
-            </div>
-        </div>
-
-        <div *ngIf="showMessagePaymentType" class="alert alert-danger">
-          El Tipo de Pago del Movimiento es requerido.
-        </div> 
-        
-        <div class="form-group">
-            <div class="md-form">
-                <textarea mdbActive #cashFlowComment="ngModel" class="md-textarea"
-                id="cashFlowComment" name="cashFlowComment" [(ngModel)]="newCashFlow.comment"></textarea>
-                <label for="cashFlowComment">Comentario:</label>
-            </div>
-        </div>
-
-        <div class="12u$">
-          <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid || hasCashRegister || hasType || hasPaymentType)" type="submit" value="Guardar" class="special" (click)="saveCashFlow()"/></li>
-            <li><input (click)="showModalCancel(cancelTemplate)" type="button" value="Cancel" /></li>
-          </ul>
-        </div>    
-      </form>
+      </div>
+      <div *ngIf="cashFlowAmount.invalid && (cashFlowAmount.dirty || cashFlowAmount.touched)" class="alert alert-danger">
+        El monto es un campo es requerido.
+      </div>
     </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Caja:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <select #cashFlowCashRegister="ngModel" required type="text" class="form-control browser-default"
+            [class.is-invalid]="showMessageCashRegister" name="cashFlowCashRegister" (blur)="validateCashRegister(cashFlowCashRegister.value)"
+            (change)="validateCashRegister(cashFlowCashRegister.value)" id="cashFlowCashRegister" [(ngModel)]="newCashFlow.cashRegisterId">
+            <option value="default" default>Seleccione la caja...</option>
+            <option [value]="cashRegister._id" *ngFor='let cashRegister of cashRegisters'>{{ cashRegister.name }}</option>
+          </select>
+        </div>
+      </div>
+      <div *ngIf="showMessageCashRegister" class="alert alert-danger">
+        La Caja del Movimiento es requerida.
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Tipo:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <select #cashFlowType="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessageType"
+            name="cashFlowType" (blur)="validateType(cashFlowType.value)" (change)="validateType(cashFlowType.value)"
+            id="cashFlowType" [(ngModel)]="newCashFlow.type">
+            <option value="default" default>Seleccione el tipo...</option>
+            <option *ngFor='let type of typesArray'>{{ type }}</option>
+          </select>
+        </div>
+      </div>
+      <div *ngIf="showMessageType" class="alert alert-danger">
+        El Tipo de Movimiento es requerido.
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Tipo de Pago:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <select #cashFlowPaymentType="ngModel" required type="text" class="form-control browser-default"
+            [class.is-invalid]="showMessagePaymentType" name="cashFlowPaymentType" (blur)="validatePaymentType(cashFlowPaymentType.value)"
+            (change)="validatePaymentType(cashFlowPaymentType.value)" id="cashFlowPaymentType" [(ngModel)]="newCashFlow.paymentType">
+            <option value="default" default>Seleccione el tipo de pago...</option>
+            <option [value]="paymentType._id" *ngFor='let paymentType of paymentTypes'>{{ paymentType.name }}</option>
+          </select>
+        </div>
+      </div>
+      <div *ngIf="showMessagePaymentType" class="alert alert-danger">
+        El Tipo de Pago del Movimiento es requerido.
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label for="cashFlowComment">Comentario:</label>
+        </div>
+      </div>
+      <div class="row pl-2">
+        <div class="col-md-9 col-lg-9 col-sm-9 pl-0">
+          <textarea mdbActive #cashFlowComment="ngModel" class="md-textarea" id="cashFlowComment" name="cashFlowComment"
+            [(ngModel)]="newCashFlow.comment"></textarea>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="col-12">
+  <div class="col-7 offset-5">
+    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid || hasCashRegister || hasType || hasPaymentType)"
+      (click)="saveCashFlow()">{{saveButton}}</button>
   </div>
 </div>
