--- a/src/app/arqueo-caja/arqueo-caja-edit/arqueo-caja-edit.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-edit/arqueo-caja-edit.component.html
@@ -1,6 +1,6 @@
 <ng-template #cancelTemplate>
   <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
-      (handleCancelButton)="closeModal()">
+    (handleCancelButton)="closeModal()">
   </app-cancel-template>
 </ng-template>
 
@@ -10,116 +10,176 @@
 </ng-template>
 
 <!-- Form -->
-<div *ngIf='cashCount'>
-  <header class="major" align="center">
-    <h2>Editando:</h2>
-  </header>
-  <div class="row">
-    <div class="col-md-6">
-      <form [formGroup]="cashCountForm" method="post" novalidate>
-        
-        <div class="form-group">
+<div *ngIf='cashCount' class="col-12 pl-0 pr-0">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form [formGroup]="cashCountForm" method="post" novalidate>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Caja:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <label>{{ cashCount.cashRegister }}</label>
         </div>
+      </div>
+    </div>
 
-        <div class="form-group">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Fecha:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <label>{{ cashCount.createdAt | date:'dd/MM/yy HH:mm' }}</label>
         </div>
+      </div>
+    </div>
 
-        <div class="form-group">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Creado por:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <label>{{ cashCount.createdBy }}</label>
         </div>
+      </div>
+    </div>
 
-        <h3>RESUMEN</h3>
+    <div class="col-12 pr-0 pt-2 subTitle1">
+      <h5>
+        {{ 'Resumen' | uppercase }}
+      </h5>
+    </div>
 
-        <div class="form-group">
-          <label>Monto Inicial:</label>
-          <label>{{ cashCount.initialAmount }}</label>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-2 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>{{ 'Monto Inicial' | uppercase }}:</label>
         </div>
-
-        <hr>
-
-        <div class="form-group">
-          <label>Ingresos:</label>
-          <label>{{ totalIngresos }}</label>
-          <hr>
-          <div *ngFor = 'let paymentType of totalsIngresosPaymentTypes'>
-            <div *ngIf = 'paymentType.total > 0'>
-              <label>{{ paymentType.paymentTypeName }}</label>
-              <label>{{ paymentType.total }}</label>
-            </div>
-          </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ cashCount.initialAmount | currency:'USD':code:'2.2-2' }}</label>
         </div>
+      </div>
+    </div>
 
-        <div class="form-group">
-          <label>Egresos:</label>
-          <label *ngIf = 'totalEgresos > 0'>- {{ totalEgresos }}</label>
-          <label *ngIf = 'totalEgresos === 0'>0</label>
-          <hr>
-          <div *ngFor = 'let paymentType of totalsEgresosPaymentTypes'>
-            <div *ngIf = 'paymentType.total > 0'>
-              <label>{{ paymentType.paymentTypeName }}</label>
-              <label>{{ paymentType.total }}</label>
-            </div>
-          </div>
+    <hr>
+
+    <div class="form-group">
+      <label>{{ 'Ingresos' | uppercase }}:</label>
+      <label>{{ totalIngresos }}</label>
+      <hr>
+      <div *ngFor='let paymentType of totalsIngresosPaymentTypes'>
+        <div *ngIf='paymentType.total > 0'>
+          <label>{{ paymentType.paymentTypeName }}</label>
+          <label>{{ paymentType.total }}</label>
         </div>
+      </div>
+    </div>
 
-        <div class="form-group">
-          <label>Estimado en Caja:</label>
-          <label>{{ estimatedAmount }}</label>
-        </div>        
+    <div class="form-group">
+      <label>{{ 'Egresos' | uppercase }}:</label>
+      <label *ngIf='totalEgresos > 0'>- {{ totalEgresos }}</label>
+      <label *ngIf='totalEgresos === 0'>0</label>
+      <hr>
+      <div *ngFor='let paymentType of totalsEgresosPaymentTypes'>
+        <div *ngIf='paymentType.total > 0'>
+          <label>{{ paymentType.paymentTypeName }}</label>
+          <label>{{ paymentType.total }}</label>
+        </div>
+      </div>
+    </div>
 
-        <div *ngIf="cashCount.closedAt === undefined">
-          <div formArrayName="realAmount" *ngFor = 'let paymentTypeCashRegister of realAmount.controls; let i=index'>
-            <div [formGroupName]="i" class="form-group">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm subTitle2">
+      <div class="row">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0 pt-2">
+          <h4>Estimado en Caja:</h4>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0 pt-2">
+          <h4>{{ estimatedAmount | currency:'USD':code:'2.2-2' }}</h4>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="cashCount.closedAt === undefined">
+      <div formArrayName="realAmount" *ngFor='let paymentTypeCashRegister of realAmount.controls; let i=index'>       
+        <div [formGroupName]="i" class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+          <div class="row">
+            <div class="col-md-4 col-lg-4 col-sm-4 pr-0 pt-2">
               <label>{{ cashCountForm.get('realAmount').controls[i].controls.paymentTypeName.value }}:</label>
-              <input formControlName="amount" class="form-control" type="number" 
-                    [class.is-invalid]="cashCountForm.get('realAmount').controls[i].controls.amount.invalid && (cashCountForm.get('realAmount').controls[i].controls.amount.dirty || cashCountForm.get('realAmount').controls[i].controls.amount.touched)" 
-                    name="{{ 'cashCountAmount' + i }}" 
-                    id="{{ 'amount' + i }}"
-                    (input)="changeAmount()">
             </div>
-
-            <div *ngIf="cashCountForm.get('realAmount').controls[i].controls.amount.invalid && (cashCountForm.get('realAmount').controls[i].controls.amount.dirty || cashCountForm.get('realAmount').controls[i].controls.amount.touched)" class="alert alert-danger">
-              Este es un campo es requerido.
+            <div class="col-md-3 col-lg-3 col-sm-3 pl-0 pt-2">
+              <input formControlName="amount" class="form-control" type="number" [class.is-invalid]="cashCountForm.get('realAmount').controls[i].controls.amount.invalid && (cashCountForm.get('realAmount').controls[i].controls.amount.dirty || cashCountForm.get('realAmount').controls[i].controls.amount.touched)"
+                name="{{ 'cashCountAmount' + i }}" id="{{ 'amount' + i }}" (input)="changeAmount()">
             </div>
           </div>
         </div>
 
-        <div *ngIf="cashCount.closedAt !== undefined">
-          <div class="form-group">
-            <label>Real en Caja</label>
+        <div *ngIf="cashCountForm.get('realAmount').controls[i].controls.amount.invalid && (cashCountForm.get('realAmount').controls[i].controls.amount.dirty || cashCountForm.get('realAmount').controls[i].controls.amount.touched)"
+          class="alert alert-danger">
+          Este es un campo es requerido.
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="cashCount.closedAt !== undefined">
+      <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3 pr-3 pl-3">
+        <div class="row pl-2">
+          <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+            <label>Real en Caja:</label>
+          </div>
+          <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
             <label>{{ realAmountTotal }}</label>
           </div>
+        </div>
+      </div>
 
-          <div class="form-group" *ngFor='let typeOfPayment of paymentDetail'>
-            <label>{{ typeOfPayment.paymentTypeName }}</label>
-            <label>{{ typeOfPayment.paymentAmount }}</label>
+      <div *ngFor='let typeOfPayment of paymentDetail'>
+        <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3 pr-3 pl-3">
+          <div class="row pl-2">
+            <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+              <label>{{ typeOfPayment.paymentTypeName }}</label>
+            </div>
+            <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+              <label>{{ typeOfPayment.paymentAmount }}</label>
+            </div>
           </div>
         </div>
-        
-        <div class="form-group">
-          <div class="md-form">
-              <textarea mdbActive formControlName="comment" class="md-textarea" id="comment"></textarea>
-              <label for="cashCountComment">Comentario:</label>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label>Diferencia:</label>
-          <label>{{ difference }}</label>
-        </div>
-
-        <div class="12u$">
-          <ul class="actions" align="center">
-            <li><input [disabled]="cashCountForm.invalid" type="submit" value="Finalizar Arqueo" class="special" (click)="updateCashCount()"/></li>
-            <li><input (click)="showModalCancel(cancelTemplate)" type="button" value="Cancel" /></li>
-          </ul>
-        </div>    
-      </form>
+      </div>
     </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label for="cashCountComment">Comentario:</label>
+        </div>
+      </div>
+      <div class="row pl-2">
+        <div class="col-md-9 col-lg-9 col-sm-9 pl-0">
+          <textarea mdbActive formControlName="comment" class="md-textarea" id="comment"></textarea>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm differenceTitle">
+      <div class="row">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0 pt-1">
+          <h4>Diferencia:</h4>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0 pt-1">
+          <h4>{{ difference | currency:'USD':code:'2.2-2' }}</h4>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="col-12">
+  <div class="col-7 offset-5">
+    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="cashCountForm.invalid" (click)="updateCashCount()">{{saveButton}}</button>
   </div>
 </div>
