--- a/src/app/cash-flows/cash-flows-edit/cash-flows-edit.component.html
+++ b/src/app/cash-flows/cash-flows-edit/cash-flows-edit.component.html
@@ -4,45 +4,77 @@
 </ng-template>
 
 <!-- Form -->
-<div *ngIf='cashFlow'>
-  <header class="major" align="center">
-    <h2>Detalle:</h2>
-  </header>
-  <div class="row">
-    <div class="col-md-6">
-      <form #form="ngForm" method="post" novalidate>
-        
-        <div class="form-group">
+<div *ngIf='cashFlow' class="col-12 pl-0 pr-0 formNewEdit">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form class="pt-4 pr-3 pl-3" #form="ngForm" method="post" novalidate>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Fecha:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <label>{{ cashFlow.date | date:'dd/MM/yy HH:mm' }}</label>
         </div>
+      </div>
+    </div>
 
-        <div class="form-group">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Monto:</label>
-          <label>{{ cashFlow.totalAmount }}</label>          
         </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ cashFlow.totalAmount }}</label>
+        </div>
+      </div>
+    </div>
 
-        <div class="form-group">
-            <label>Caja:</label>
-            <label>{{ cashFlow.cashRegister }}</label>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Caja:</label>
         </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ cashFlow.cashRegister }}</label>
+        </div>
+      </div>
+    </div>
 
-        <div class="form-group">
-            <label>Tipo:</label>
-            <label>{{ cashFlow.type }}</label>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Tipo:</label>
         </div>
-        
-        <div class="form-group">
-            <label>Tipo de Pago:</label>
-            <label>{{ paymentTypeName }}</label>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ cashFlow.type }}</label>
         </div>
+      </div>
+    </div>
 
-        <div class="form-group" *ngIf="cashFlow.comment !== undefined">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Tipo de Pago:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ paymentTypeName }}</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3" *ngIf="cashFlow.comment !== undefined">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Comentario:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <label>{{ cashFlow.comment }}</label>
         </div>
-      
-      </form>
+      </div>
     </div>
-  </div>
+  </form>
 </div>
