--- a/src/app/cash-flows/cash-flows-list/cash-flows-list.component.html
+++ b/src/app/cash-flows/cash-flows-list/cash-flows-list.component.html
@@ -1,48 +1,49 @@
 <ng-template #deleteTemplate>
-    <app-delete-template 
-        [modalTitle]="modalDeleteTitle" 
-        [modalMessage]="modalDeleteMessage" 
-        (delete)="deleteCashFlow()" 
+    <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deleteCashFlow()"
         (close)="closeModal()">
     </app-delete-template>
 </ng-template>
 
 <ng-template #errorTemplate>
-  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
-  </app-error-template>
+    <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+    </app-error-template>
 </ng-template>
 
-<div class="row">
-    <div class="col-md-12 col-lg-12 col-sm-12 pr-0 pl-0 mr-0 pr-0 customTitleBar">
-        <div class="row ml-1 settingsTitle">
+<div class="row pl-0 pr-0 ml-0 mr-0">
+    <div class="col-md-8 col-lg-8 col-sm-8 pr-0 pl-0 mr-0 pr-0 customTitleBar">
+        <div class="row pr-0 ml-0 mr-0 pageTitle">
             <header class="major">
-                    <h5 class="customTitle">{{ pageTitle }}</h5>
+                <h5 class="customTitle">{{ pageTitle }}</h5>
             </header>
-            <a class="customFloatedButton" [routerLink]="['/sales/cash-flows', { outlets: { edit: ['newCashFlow'] } }]" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nueva Movimiento</a>
+            <a class="customFloatedButton" [routerLink]="['/sales/cash-flows', { outlets: { edit: ['newCashFlow'] } }]"
+                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Movimiento</a>
         </div>
-        <div class="row ml-1">
-            <div class="col-md-8 col-lg-8 col-sm-8 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
+        <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
+            <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
                 <div class="row mb-2 customBox">
                     <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
                         <div class="row">
                             <h6 class="pt-2">Tipo:</h6>
                             <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left">
-                                <mdb-select #queryType name="queryType" id="queryType" [options]="typesSelect"  
-                                [(ngModel)]="typeSelectedValue" placeholder="Choose your option" class="colorful-select dropdown-primary"></mdb-select>
-                            </div>    
-                            
+                                <mdb-select #queryType name="queryType" id="queryType" [options]="typesSelect"
+                                    [(ngModel)]="typeSelectedValue" placeholder="Choose your option" class="colorful-select dropdown-primary"></mdb-select>
+                            </div>
+
                             <h6 class="pt-2">Tipo de pago:</h6>
                             <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left">
-                                <mdb-select #queryCashRegister name="queryCashRegister" id="queryCashRegister" [options]="cashRegistersSelect"  
-                                [(ngModel)]="cashSelectedValue" placeholder="Choose your option" class="colorful-select dropdown-primary"></mdb-select>
-                            </div>   
+                                <mdb-select #queryCashRegister name="queryCashRegister" id="queryCashRegister"
+                                    [options]="cashRegistersSelect" [(ngModel)]="cashSelectedValue" placeholder="Choose your option"
+                                    class="colorful-select dropdown-primary"></mdb-select>
+                            </div>
                         </div>
 
                         <div class="row">
-                            <app-date-picker name="startDate" (onValueChanged)="onValueChangedStartDate($event)" [(ngModel)]="startDate" [dpPlaceHolder]="'Fecha de Inicio'" ngDefaultControl></app-date-picker>
-                            <app-date-picker name="endDate" (onValueChanged)="onValueChangedEndDate($event)" [(ngModel)]="endDate" [dpPlaceHolder]="'Fecha de Fin'" ngDefaultControl></app-date-picker>
+                            <app-date-picker name="startDate" (onValueChanged)="onValueChangedStartDate($event)"
+                                [(ngModel)]="startDate" [dpPlaceHolder]="'Fecha de Inicio'" ngDefaultControl></app-date-picker>
+                            <app-date-picker name="endDate" (onValueChanged)="onValueChangedEndDate($event)"
+                                [(ngModel)]="endDate" [dpPlaceHolder]="'Fecha de Fin'" ngDefaultControl></app-date-picker>
                         </div>
-                    </form>    
+                    </form>
                 </div>
                 <div class="row">
                     <table class="table table-bordered table-hover customTable">
@@ -60,25 +61,25 @@
                             <!-- Loren, aca en el *ngFor implemento el pipe que defino en la carpeta shared/pipes -->
                             <!-- El pipe lo agregue en el cash-flows.module -->
                             <!-- Fijate que agrego los ng-model por los que quiero filtrar (cashSelectedValue y typeSelectedValue) -->
-                            <tr *ngFor = 'let cashFlow of filteredCashFlows | cashFlowSearch: cashSelectedValue:typeSelectedValue:startDate:endDate'>
-                                    <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.date | date:'dd/MM/yy HH:mm' }}</td>
-                                    <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.cashRegister }}</td>
-                                    <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.totalAmount }}</td>
-                                    <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.type }}</td>
-                                    <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.comment }}</td>
-                                    <td class="align-middle" *ngIf='cashFlow.deleted === false'>
-                                        <a [routerLink]="['/sales/cash-flows', { outlets: { edit: ['editCashFlow', cashFlow._id] } }]" class="btn btn-yellow btn-sm customButtonText">Detalle</a>
-                                        <a (click) = "showModalDelete(deleteTemplate, cashFlow._id)" class="btn btn-red btn-sm">Eliminar</a>
-                                    </td>
+                            <tr *ngFor='let cashFlow of filteredCashFlows | cashFlowSearch: cashSelectedValue:typeSelectedValue:startDate:endDate'>
+                                <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.date | date:'dd/MM/yy HH:mm' }}</td>
+                                <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.cashRegister }}</td>
+                                <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.totalAmount | currency:'USD':code:'2.2-2' }}</td>
+                                <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.type }}</td>
+                                <td *ngIf='cashFlow.deleted === false'>{{ cashFlow.comment }}</td>
+                                <td class="align-middle" *ngIf='cashFlow.deleted === false'>
+                                    <a [routerLink]="['/sales/cash-flows', { outlets: { edit: ['editCashFlow', cashFlow._id] } }]"
+                                        class="btn btn-yellow btn-sm customButtonText">Detalle</a>
+                                    <a (click)="showModalDelete(deleteTemplate, cashFlow._id)" class="btn btn-red btn-sm">Eliminar</a>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-            </div>    
-            <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-5 pt-1 pb-2 mt-2">
-                <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
             </div>
         </div>
-  </div>
-
+    </div>
+    <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0 outletGeneric">
+        <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
+    </div>
 </div>
