--- a/src/styles.scss
+++ b/src/styles.scss
@@ -344,7 +344,7 @@ width: 100%!important;
 }
 
 button.btn-primary:disabled {
-    background-color: red;
+    background-color: $primary-color;
  }
 
  .formNewEdit {
