--- a/src/app/client-account-transactions/transaction-detail/transaction-detail.component.html
+++ b/src/app/client-account-transactions/transaction-detail/transaction-detail.component.html
@@ -4,45 +4,77 @@
 </ng-template>
 
 <!-- Form -->
-<div *ngIf='transaction'>
-  <header class="major" align="center">
-    <h2>Detalle:</h2>
-  </header>
-  <div class="row">
-    <div class="col-md-6">
-      <form #form="ngForm" method="post" novalidate>
-        
-        <div class="form-group">
+<div *ngIf='transaction' class="col-12 pl-0 pr-0">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form class="pt-4 pr-3 pl-3" #form="ngForm" method="post" novalidate>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Cliente:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <label>{{ transaction.clientName }}</label>
         </div>
+      </div>
+    </div>
 
-        <div class="form-group">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Monto:</label>
-          <label>{{ transaction.amount }}</label>          
         </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ transaction.amount }}</label>
+        </div>
+      </div>
+    </div>
 
-        <div class="form-group">
-            <label>Fecha Creación:</label>
-            <label>{{ transaction.date | date:'dd/MM/yy HH:mm' }}</label>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Fecha Creación:</label>
         </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ transaction.date | date:'dd/MM/yy HH:mm' }}</label>
+        </div>
+      </div>
+    </div>
 
-        <div class="form-group">
-            <label>Medio de Pago:</label>
-            <label>{{ transactionPaymentMethodName }}</label>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Medio de Pago:</label>
         </div>
-        
-        <div class="form-group">
-            <label>Caja:</label>
-            <label>{{ transactionCashRegisterName }}</label>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ transactionPaymentMethodName }}</label>
         </div>
+      </div>
+    </div>
 
-        <div class="form-group" *ngIf="transaction.comment !== undefined">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Caja:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ transactionCashRegisterName }}</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3" *ngIf="transaction.comment !== undefined">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Comentario:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <label>{{ transaction.comment }}</label>
         </div>
-      
-      </form>
+      </div>
     </div>
-  </div>
+  </form>
 </div>
