--- a/src/app/client-account-transactions/transaction-new/transaction-new.component.html
+++ b/src/app/client-account-transactions/transaction-new/transaction-new.component.html
@@ -1,6 +1,6 @@
 <ng-template #cancelTemplate>
   <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
-      (handleCancelButton)="closeModal()">
+    (handleCancelButton)="closeModal()">
   </app-cancel-template>
 </ng-template>
 
@@ -10,90 +10,100 @@
 </ng-template>
 
 <!-- Form -->
-<div class="container">
-  <header class="major" align="center">
-    <h2>Nueva Transacción</h2>
-  </header>
-  <div class="row">
-    <div class="col-md-6">
-      <form #form="ngForm" method="post" novalidate>
-
-          <div class="form-group" [class.has-error]="showMessageCashRegister">
-              <label>Cliente:</label>
-              <div class="select-wrapper">
-                <select #clientTransaction="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessageClient" name="clientTransaction" 
-                  (blur)="validateClient(clientTransaction.value)"
-                  (change)="validateClient(clientTransaction.value)"
-                  id="clientTransaction" [(ngModel)]="newTransaction.client">
-                  <option value="default" default>Seleccione el cliente...</option>
-                  <option [value]="client._id" *ngFor = 'let client of clients'>{{ client.name }}</option>
-                </select>
-              </div>
-          </div>
-  
-          <div *ngIf="showMessageClient" class="alert alert-danger">
-            El Cliente es requerido.
-          </div>
-
-        <div class="form-group">
-          <label>Monto:</label>
-          <input #transactionAmount="ngModel" required type="number" class="form-control" [class.is-invalid]="transactionAmount.invalid && (transactionAmount.dirty || transactionAmount.touched)" name="transactionAmount" 
-                id="transactionAmount" [(ngModel)]="newTransaction.amount">
+<div class="col-12 pl-0 pr-0 formNewEdit">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form class="pt-4 pr-3 pl-3" #form="ngForm" method="post" novalidate>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Cliente:</label>
         </div>
-
-        <div *ngIf="transactionAmount.invalid && (transactionAmount.dirty || transactionAmount.touched)" class="alert alert-danger">
-          El monto es un campo es requerido.
-        </div>            
-
-        <div class="form-group" [class.has-error]="showMessagePaymentType">
-            <label>Medio de Pago:</label>
-            <div class="select-wrapper">
-              <select #transactionPaymentType="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessagePaymentType" name="transactionPaymentType" 
-                (blur)="validatePaymentType(transactionPaymentType.value)"
-                (change)="validatePaymentType(transactionPaymentType.value)"
-                id="transactionPaymentType" [(ngModel)]="newTransaction.paymentType">
-                <option value="default" default>Seleccione el tipo de pago...</option>
-                <option [value]="paymentType._id" *ngFor = 'let paymentType of paymentTypes'>{{ paymentType.name }}</option>
-              </select>
-            </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <select #clientTransaction="ngModel" required type="text" class="form-control browser-default"
+            [class.is-invalid]="showMessageClient" name="clientTransaction" (blur)="validateClient(clientTransaction.value)"
+            (change)="validateClient(clientTransaction.value)" id="clientTransaction" [(ngModel)]="newTransaction.client">
+            <option value="default" default>Seleccione el cliente...</option>
+            <option [value]="client._id" *ngFor='let client of clients'>{{ client.name }}</option>
+          </select>
         </div>
-
-        <div *ngIf="showMessagePaymentType" class="alert alert-danger">
-          El Medio de Pago es requerido.
-        </div>
-        
-        <div class="form-group" [class.has-error]="showMessageCashRegister" *ngIf="lengthCashRegister === true">
-            <label>Caja:</label>
-            <div class="select-wrapper">
-              <select #transactionCashRegister="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessageCashRegister" name="transactionCashRegister" 
-                (blur)="validateCashRegister(transactionCashRegister.value)"
-                (change)="validateCashRegister(transactionCashRegister.value)"
-                id="transactionCashRegister" [(ngModel)]="newTransaction.cashRegister">
-                <option value="default" default>Seleccione la caja...</option>
-                <option [value]="cashRegister._id" *ngFor = 'let cashRegister of cashRegisters'>{{ cashRegister.name }}</option>
-              </select>
-            </div>
-        </div>
-
-        <div *ngIf="showMessageCashRegister" class="alert alert-danger">
-          La Caja es requerida.
-        </div>
-
-        <div class="form-group">
-            <div class="md-form">
-                <textarea mdbActive #transactionComment="ngModel" class="md-textarea"
-                id="transactionComment" name="transactionComment" [(ngModel)]="newTransaction.comment"></textarea>
-                <label for="transactionComment">Comentario:</label>
-            </div>
-        </div>
-
-        <div class="12u$">
-          <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid || hasCashRegister || hasClient || hasPaymentType)" type="submit" value="Guardar" class="special" (click)="saveTransaction()"/></li>
-            <li><input type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" /></li>
-          </ul>
-        </div>    
-      </form>
+      </div>
+      <div *ngIf="showMessageClient" class="alert alert-danger">
+        El Cliente es requerido.
+      </div>
     </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Monto:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input #transactionAmount="ngModel" required type="number" class="form-control" [class.is-invalid]="transactionAmount.invalid && (transactionAmount.dirty || transactionAmount.touched)"
+            name="transactionAmount" id="transactionAmount" [(ngModel)]="newTransaction.amount">
+        </div>
+      </div>
+      <div *ngIf="transactionAmount.invalid && (transactionAmount.dirty || transactionAmount.touched)" class="alert alert-danger">
+        El monto es un campo es requerido.
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Medio de Pago:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <select #transactionPaymentType="ngModel" required type="text" class="form-control browser-default"
+            [class.is-invalid]="showMessagePaymentType" name="transactionPaymentType" (blur)="validatePaymentType(transactionPaymentType.value)"
+            (change)="validatePaymentType(transactionPaymentType.value)" id="transactionPaymentType" [(ngModel)]="newTransaction.paymentType">
+            <option value="default" default>Seleccione el tipo de pago...</option>
+            <option [value]="paymentType._id" *ngFor='let paymentType of paymentTypes'>{{ paymentType.name }}</option>
+          </select>
+        </div>
+      </div>
+      <div *ngIf="showMessagePaymentType" class="alert alert-danger">
+        El Medio de Pago es requerido.
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Caja:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <select #transactionCashRegister="ngModel" required type="text" class="form-control browser-default"
+            [class.is-invalid]="showMessageCashRegister" name="transactionCashRegister" (blur)="validateCashRegister(transactionCashRegister.value)"
+            (change)="validateCashRegister(transactionCashRegister.value)" id="transactionCashRegister" [(ngModel)]="newTransaction.cashRegister">
+            <option value="default" default>Seleccione la caja...</option>
+            <option [value]="cashRegister._id" *ngFor='let cashRegister of cashRegisters'>{{ cashRegister.name }}</option>
+          </select>
+        </div>
+      </div>
+      <div *ngIf="showMessageCashRegister" class="alert alert-danger">
+        La Caja es requerida.
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-9 col-lg-9 col-sm-9 pr-0">
+          <textarea mdbActive #transactionComment="ngModel" class="md-textarea" id="transactionComment" name="transactionComment"
+            [(ngModel)]="newTransaction.comment"></textarea>
+          <label for="transactionComment">Comentario:</label>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="col-12">
+  <div class="col-7 offset-5">
+    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid || hasCashRegister || hasClient || hasPaymentType)"
+      (click)="saveTransaction()">{{saveButton}}</button>
   </div>
 </div>
