--- a/src/app/client/client-new/client-new.component.html
+++ b/src/app/client/client-new/client-new.component.html
@@ -1,6 +1,6 @@
 <ng-template #cancelTemplate>
   <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
-      (handleCancelButton)="closeModal()">
+    (handleCancelButton)="closeModal()">
   </app-cancel-template>
 </ng-template>
 
@@ -10,59 +10,74 @@
 </ng-template>
 
 <!-- Form -->
-<div class="container">
-  <header class="major" align="center">
-    <h2>{{ pageTitle }}</h2>
-  </header>
-  <div class="row">
-    <div class="col-md-6">
-      <form #form="ngForm" method="post" novalidate>
-
-        <div class="form-group">
+<div class="col-12 pl-0 pr-0 formNewEdit">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form class="pt-4 pr-3 pl-3" #form="ngForm" method="post" novalidate>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Nombre:</label>
-          <input #clientName="ngModel" required type="text" class="form-control" [class.is-invalid]="clientName.invalid && (clientName.dirty || clientName.touched)" name="clientName" 
-                id="clientName" [(ngModel)]="newClient.name">
         </div>
-
-        <div *ngIf="clientName.invalid && (clientName.dirty || clientName.touched)" class="alert alert-danger">
-          El nombre es un campo es requerido.
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input #clientName="ngModel" required type="text" class="form-control" [class.is-invalid]="clientName.invalid && (clientName.dirty || clientName.touched)"
+            name="clientName" id="clientName" [(ngModel)]="newClient.name">
         </div>
-
-        <div class="form-group">
-          <label>Teléfono:</label>
-          <input #clientTel="ngModel" type="text" class="form-control" [class.is-invalid]="clientTel.invalid && (clientTel.dirty || clientTel.touched)" name="clientTel" 
-                id="clientTel" [(ngModel)]="newClient.tel">
-        </div>
-        
-        <div class="form-group">
-          <label>Dirección:</label>
-          <input #clientAddressStreet="ngModel" type="text" class="form-control" name="clientAddressStreet" 
-                id="clientAddressStreet" [(ngModel)]="newClient.addressStreet"
-                placeholder="Calle">
-
-          <br>
-          
-          <input #clientAddressNumber="ngModel" type="text" class="form-control" name="clientAddressNumber" 
-                id="clientAddressNumber" [(ngModel)]="newClient.addressNumber"
-                placeholder="Número">
-
-          <input #clientAddressDpto="ngModel" type="text" class="form-control" name="clientAddressDpto" 
-                id="clientAddressDpto" [(ngModel)]="newClient.addressDpto"
-                placeholder="Piso / Dpto">
-        </div>
-
-        <div class="md-form">
-            <input mdbDeepDirective [(ngModel)]="newClient.enabledTransactions" type="checkbox" name="checkEnabledTransactions" id="checkEnabledTransactions">
-            <label for="checkEnabledTransactions">Tiene Cta Cte</label>
-        </div>
-
-        <div class="12u$">
-          <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid)" type="submit" value="Guardar" class="special" (click)="saveClient()"/></li>
-            <li><input type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" /></li>
-          </ul>
-        </div>    
-      </form>
+      </div>
+      <div *ngIf="clientName.invalid && (clientName.dirty || clientName.touched)" class="alert alert-danger">
+        El nombre es un campo es requerido.
+      </div>
     </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Teléfono:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input #clientTel="ngModel" type="text" class="form-control" [class.is-invalid]="clientTel.invalid && (clientTel.dirty || clientTel.touched)"
+            name="clientTel" id="clientTel" [(ngModel)]="newClient.tel">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Dirección:</label>
+        </div>
+        <div class="col-md-3 col-lg-3 col-sm-3 pl-0">
+          <input #clientAddressStreet="ngModel" type="text" class="form-control" name="clientAddressStreet" id="clientAddressStreet"
+            [(ngModel)]="newClient.addressStreet" placeholder="Calle">
+        </div>
+        <div class="col-md-2 col-lg-2 col-sm-2 pl-0">
+          <input #clientAddressNumber="ngModel" type="text" class="form-control" name="clientAddressNumber" id="clientAddressNumber"
+            [(ngModel)]="newClient.addressNumber" placeholder="Número">
+        </div>
+        <div class="col-md-2 col-lg-2 col-sm-2 pl-0">
+          <input #clientAddressDpto="ngModel" type="text" class="form-control" name="clientAddressDpto" id="clientAddressDpto"
+            [(ngModel)]="newClient.addressDpto" placeholder="Piso / Dpto">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input mdbDeepDirective [(ngModel)]="newClient.enabledTransactions" type="checkbox" name="checkEnabledTransactions"
+            id="checkEnabledTransactions">
+          <label for="checkEnabledTransactions">Tiene Cta Cte</label>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="col-12">
+  <div class="col-7 offset-5">
+    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid)" (click)="saveClient()">{{saveButton}}</button>
   </div>
 </div>
