--- a/src/app/supplier/supplier-list/supplier-list.component.html
+++ b/src/app/supplier/supplier-list/supplier-list.component.html
@@ -5,23 +5,25 @@
 </ng-template>
 
 <ng-template #errorTemplate>
-  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
-  </app-error-template>
+    <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+    </app-error-template>
 </ng-template>
 
-<div class="row">
-    <div class="col-md-12 col-lg-12 col-sm-12 pr-0 pl-0 mr-0 pr-0 customTitleBar">
-        <div class="row ml-1 settingsTitle">
+<div class="row pl-0 pr-0 ml-0 mr-0">
+    <div class="col-md-8 col-lg-8 col-sm-8 pr-0 pl-0 mr-0 pr-0 customTitleBar">
+        <div class="row pr-0 ml-0 mr-0 pageTitle">
             <header class="major">
-                    <h5 class="customTitle">{{ pageTitle }}</h5>
+                <h5 class="customTitle">{{ pageTitle }}</h5>
             </header>
-            <a class="customFloatedButton" [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['newSupplier'] } }]" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Proveedor</a>
+            <a class="customFloatedButton" [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['newSupplier'] } }]"
+                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Proveedor</a>
         </div>
-        <div class="row ml-1">
-            <div class="col-md-8 col-lg-8 col-sm-8 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">                
+        <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
+            <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
                 <div class="row">
                     <div class="form-check">
-                        <input class="form-check-input" mdbInputDirective type="checkbox" id="inactiveSuppliers" name="inactiveSuppliers" [(ngModel)]="showInactiveSuppliers">
+                        <input class="form-check-input" mdbInputDirective type="checkbox" id="inactiveSuppliers" name="inactiveSuppliers"
+                            [(ngModel)]="showInactiveSuppliers">
                         <label class="form-check-label" for="inactiveSuppliers">{{ checkboxText }}</label>
                     </div>
                     <br>
@@ -37,24 +39,29 @@
                             </tr>
                         </thead>
                         <tbody class="table-wrapper" *ngIf='filteredSuppliers && filteredSuppliers.length'>
-                            <tr *ngFor = 'let supplier of filteredSuppliers'>
-                                    <td *ngIf='supplier.active === true || showInactiveSuppliers === true'>{{ supplier.name }}</td>
-                                    <td *ngIf='supplier.active === true || showInactiveSuppliers === true'>{{ supplier.email }}</td>
-                                    <td *ngIf='supplier.active === true || showInactiveSuppliers === true'>{{ supplier.tel }}</td>
-                                    <td *ngIf='supplier.active === true || showInactiveSuppliers === true'>{{ supplier.addressStreet || ' '}} {{ supplier.addressNumber || ' '}} {{ supplier.addressDpto || ' ' }}</td>
-                                    <td class="align-middle" *ngIf='supplier.active === true || showInactiveSuppliers === true'>
-                                        <a [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['editSupplier', supplier._id] } }]" class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                                        <a (click) = "showModalDelete(deleteTemplate, supplier._id)" class="btn btn-red btn-sm">Eliminar</a>
-                                    </td>
+                            <tr *ngFor='let supplier of filteredSuppliers'>
+                                <td *ngIf='supplier.active === true || showInactiveSuppliers === true'>{{ supplier.name
+                                    }}</td>
+                                <td *ngIf='supplier.active === true || showInactiveSuppliers === true'>{{
+                                    supplier.email }}</td>
+                                <td *ngIf='supplier.active === true || showInactiveSuppliers === true'>{{ supplier.tel
+                                    }}</td>
+                                <td *ngIf='supplier.active === true || showInactiveSuppliers === true'>{{
+                                    supplier.addressStreet || ' '}} {{ supplier.addressNumber || ' '}} {{
+                                    supplier.addressDpto || ' ' }}</td>
+                                <td class="align-middle" *ngIf='supplier.active === true || showInactiveSuppliers === true'>
+                                    <a [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['editSupplier', supplier._id] } }]"
+                                        class="btn btn-yellow btn-sm customButtonText">Editar</a>
+                                    <a (click)="showModalDelete(deleteTemplate, supplier._id)" class="btn btn-red btn-sm">Eliminar</a>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-            </div>    
-            <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-5 pt-1 pb-2 mt-2">
-                <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
             </div>
         </div>
-  </div>
-
+    </div>
+    <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0 outletGeneric">
+        <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
+    </div>
 </div>
