--- a/src/app/supplier/supplier-new/supplier-new.component.html
+++ b/src/app/supplier/supplier-new/supplier-new.component.html
@@ -1,6 +1,6 @@
 <ng-template #cancelTemplate>
   <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
-      (handleCancelButton)="closeModal()">
+    (handleCancelButton)="closeModal()">
   </app-cancel-template>
 </ng-template>
 
@@ -10,65 +10,85 @@
 </ng-template>
 
 <!-- Form -->
-<div class="container">
-  <header class="major" align="center">
-    <h2>{{ pageTitle }}</h2>
-  </header>
-  <div class="row">
-    <div class="col-md-6">
-      <form #form="ngForm" method="post" novalidate>
-
-        <div class="form-group">
+<div class="col-12 pl-0 pr-0 formNewEdit">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form class="pt-4 pr-3 pl-3" #form="ngForm" method="post" novalidate>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Nombre:</label>
-          <input #supplierName="ngModel" required type="text" class="form-control" [class.is-invalid]="supplierName.invalid && (supplierName.dirty || supplierName.touched)" name="supplierName" 
-                id="supplierName" [(ngModel)]="newSupplier.name">
         </div>
-
-        <div *ngIf="supplierName.invalid && (supplierName.dirty || supplierName.touched)" class="alert alert-danger">
-          El nombre es un campo es requerido.
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input #supplierName="ngModel" required type="text" class="form-control" [class.is-invalid]="supplierName.invalid && (supplierName.dirty || supplierName.touched)"
+            name="supplierName" id="supplierName" [(ngModel)]="newSupplier.name">
         </div>
-
-        <div class="form-group">
-          <label>Email:</label>
-          <input #supplierEmail="ngModel" type="text" class="form-control" [class.is-invalid]="supplierEmail.invalid && (supplierEmail.dirty || supplierEmail.touched)" name="supplierEmail" 
-                id="supplierEmail" [(ngModel)]="newSupplier.email">
-        </div>
-
-        <div class="form-group">
-          <label>Teléfono:</label>
-          <input #supplierTel="ngModel" type="text" class="form-control" [class.is-invalid]="supplierTel.invalid && (supplierTel.dirty || supplierTel.touched)" name="supplierTel" 
-                id="supplierTel" [(ngModel)]="newSupplier.tel">
-        </div>
-        
-        <div class="form-group">
-          <label>Dirección:</label>
-          <input #supplierAddressStreet="ngModel" type="text" class="form-control" name="supplierAddressStreet" 
-                id="supplierAddressStreet" [(ngModel)]="newSupplier.addressStreet"
-                placeholder="Calle">
-
-          <br>
-          
-          <input #supplierAddressNumber="ngModel" type="text" class="form-control" name="supplierAddressNumber" 
-                id="supplierAddressNumber" [(ngModel)]="newSupplier.addressNumber"
-                placeholder="Número">
-
-          <input #supplierAddressDpto="ngModel" type="text" class="form-control" name="supplierAddressDpto" 
-                id="supplierAddressDpto" [(ngModel)]="newSupplier.addressDpto"
-                placeholder="Piso / Dpto">
-        </div>
-
-        <div class="md-form">
-            <input mdbDeepDirective [(ngModel)]="newSupplier.active" type="checkbox" name="checkEnabledTransactions" id="checkEnabledTransactions">
-            <label for="checkEnabledTransactions">Activo</label>
-        </div>
-
-        <div class="12u$">
-          <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid)" type="submit" value="Guardar" class="special" (click)="saveSupplier()"/></li>
-            <li><input type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" /></li>
-          </ul>
-        </div>    
-      </form>
+      </div>
+      <div *ngIf="supplierName.invalid && (supplierName.dirty || supplierName.touched)" class="alert alert-danger">
+        El nombre es un campo es requerido.
+      </div>
     </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Email:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input #supplierEmail="ngModel" type="text" class="form-control" [class.is-invalid]="supplierEmail.invalid && (supplierEmail.dirty || supplierEmail.touched)"
+            name="supplierEmail" id="supplierEmail" [(ngModel)]="newSupplier.email">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Teléfono:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input #supplierTel="ngModel" type="text" class="form-control" [class.is-invalid]="supplierTel.invalid && (supplierTel.dirty || supplierTel.touched)"
+            name="supplierTel" id="supplierTel" [(ngModel)]="newSupplier.tel">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Dirección:</label>
+        </div>
+        <div class="col-md-3 col-lg-3 col-sm-3 pl-0">
+          <input #supplierAddressStreet="ngModel" type="text" class="form-control" name="supplierAddressStreet" id="supplierAddressStreet"
+            [(ngModel)]="newSupplier.addressStreet" placeholder="Calle">
+        </div>
+        <div class="col-md-2 col-lg-2 col-sm-2 pl-0">
+          <input #supplierAddressNumber="ngModel" type="text" class="form-control" name="supplierAddressNumber" id="supplierAddressNumber"
+            [(ngModel)]="newSupplier.addressNumber" placeholder="Número">
+        </div>
+        <div class="col-md-2 col-lg-2 col-sm-2 pl-0">
+          <input #supplierAddressDpto="ngModel" type="text" class="form-control" name="supplierAddressDpto" id="supplierAddressDpto"
+            [(ngModel)]="newSupplier.addressDpto" placeholder="Piso / Dpto">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input mdbDeepDirective [(ngModel)]="newSupplier.active" type="checkbox" name="checkEnabledTransactions" id="checkEnabledTransactions">
+          <label for="checkEnabledTransactions">Activo</label>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="col-12">
+  <div class="col-7 offset-5">
+    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid)" (click)="saveSupplier()">{{saveButton}}</button>
   </div>
 </div>
