--- a/src/app/size/size-new/size-new.component.html
+++ b/src/app/size/size-new/size-new.component.html
@@ -1,6 +1,6 @@
 <ng-template #cancelTemplate>
   <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
-      (handleCancelButton)="closeModal()">
+    (handleCancelButton)="closeModal()">
   </app-cancel-template>
 </ng-template>
 
@@ -21,31 +21,42 @@
   </div>
 </ng-template>
 <!-- Form -->
-<div class="animated fadeIn" *ngIf='size'>
-  <div class="card card-cascade customHeightCard">
-      <div class="view overlay hm-white-slight waves-light customCardCascade text-center pt-3 pl-3 pr-3 pb-3" mdbRippleRadius>
-        <h3>{{ pageTitle }}</h3>
+<div class="col-12 pl-0 pr-0 formNewEditSettings">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form class="pt-4 pr-3 pl-3" method="post" novalidate [formGroup]="sizeForm">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Nombre:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+            <input mdbActive formControlName="name" type="text" class="form-control" [class.is-invalid]="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
+            id="name">
+        </div>
       </div>
-      <div class="card-body customHeightCard"> 
-        <form method="post" novalidate [formGroup]="sizeForm">
-          <div class="md-form mt-3">
-            <input mdbActive formControlName="name" type="text" class="form-control" [class.is-invalid]="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)" id="name">
-            <label for="name">Nombre:</label>
-            <div *ngIf="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)" class="alert alert-danger">
+      <div *ngIf="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
+            class="alert alert-danger">
             El nombre del Tamaño es requerido.
-            </div>
           </div>
-          <div class="md-form">
-              <input mdbDeepDirective formControlName="available" type="checkbox" id="checkDisponible">
-              <label for="checkDisponible">Disponible</label>
-          </div>
-          <div class="modal-footer">
-            <div class="options">
-              <button class="btn btn-primary waves-light" type="button"  value="Cancel" (click)="showModalCancel(cancelTemplate)" mdbRippleRadius>Cancelar</button>
-              <button class="btn btn-primary waves-light" [disabled]="sizeForm.invalid" type="button" value="Guardar" (click)="saveSize()" mdbRippleRadius>Aceptar</button>
-            </div>
-          </div>
-        </form>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+            <input mdbDeepDirective formControlName="available" type="checkbox" id="checkDisponible">
+            <label for="checkDisponible">Disponible</label>
+        </div>
       </div>
+    </div>
+  </form>
+</div>
+<div class="col-12">
+  <div class="col-7 offset-5">
+    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="sizeForm.invalid" (click)="saveSize()">{{saveButton}}</button>
   </div>
 </div>
