--- a/src/styles.scss
+++ b/src/styles.scss
@@ -347,6 +347,10 @@ button.btn-primary:disabled {
     background-color: $primary-color;
  }
 
- .formNewEdit {
+.formNewEdit {
     height: 82vh;
- }
+}
+
+.formNewEditSettings {
+    height: 78vh;
+}
