--- a/src/app/general-settings/general-settings.component.html
+++ b/src/app/general-settings/general-settings.component.html
@@ -49,7 +49,7 @@
     <!--/. Sidebar navigation -->
 
     </div>
-    <div class="col-md-10 col-lg-10">
+    <div class="col-md-10 col-lg-10 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0">
         <router-outlet></router-outlet>
     </div>
 </div>
