--- a/src/app/payment-type/payment-type-list/payment-type-list.component.html
+++ b/src/app/payment-type/payment-type-list/payment-type-list.component.html
@@ -9,14 +9,18 @@
     </app-error-template>
 </ng-template>
 
-<div class="row">
-    <div class="col-md-6 col-lg-6 mr-0 pr-0">
-        <div class="row ml-1 settingsTitle">
-            <header class="major">
-                <h5 class="customTitle">{{ pageTitle }}</h5>
-            </header>
-            <a class="customFloatedButton" [routerLink]="['/settings/general/paymentTypes', { outlets: { edit: ['newPaymentType'] } }]"
-                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nueva Forma de Pago</a>
+<div class="row pl-0 pr-0 ml-0 mr-0">
+    <div class="col-md-8 col-lg-8 col-sm-8 pr-0 pl-0 mr-0 pr-0">
+        <div class="settingsTitle">
+            <div class="float-left">
+                <header class="major">
+                    <h5 class="customTitle">{{ pageTitle }}</h5>
+                </header>
+            </div>
+            <div class="float-right">
+            <a [routerLink]="['/settings/general/paymentTypes', { outlets: { edit: ['newPaymentType'] } }]" class="btn btn-primary btn-sm waves-light customButton"
+                mdbRippleRadius> + Nueva Forma de Pago</a>
+            </div>
         </div>
 
         <div class="row mb-2 mt-2 ml-2">
@@ -52,17 +56,17 @@
                             <td>{{ paymentType.available }}</td>
                             <td class="align-middle">
                                 <a [routerLink]="['/settings/general/paymentTypes', { outlets: { edit: ['editPaymentType', paymentType._id] } }]"
-                                    class="btn btn-yellow btn-sm customButtonText">Editar</a>                                
-                                <button [disabled]="paymentType.default === true" type="button" class="btn btn-red btn-sm" (click)="showModalDelete(deleteTemplate, paymentType._id)">Eliminar</button>
+                                    class="btn btn-yellow btn-sm customButtonText">Editar</a>
+                                <button [disabled]="paymentType.default === true" type="button" class="btn btn-red btn-sm"
+                                    (click)="showModalDelete(deleteTemplate, paymentType._id)">Eliminar</button>
                             </td>
                         </tr>
                     </tbody>
                 </table>
-            </div>            
+            </div>
         </div>
     </div>
-
-    <div class="col-md-6 col-lg-6 mr-0 pr-0">
+    <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0 outletGeneric">
         <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
     </div>
 </div>
