--- a/src/app/size/size-edit/size-edit.component.html
+++ b/src/app/size/size-edit/size-edit.component.html
@@ -1,6 +1,6 @@
 <ng-template #cancelTemplate>
   <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
-      (handleCancelButton)="closeModal()">
+    (handleCancelButton)="closeModal()">
   </app-cancel-template>
 </ng-template>
 
@@ -10,38 +10,42 @@
 </ng-template>
 
 <!-- Form -->
-<div *ngIf='size'>
-  <header class="major" align="center">
-    <h2>Editando: {{sizeNameModified}}</h2>
-  </header>
-  <div class="posts">
-        
-      <form method="post" novalidate [formGroup]="sizeForm">
-
-        <div class="form-group">
+<div *ngIf='size' class="col-12 pl-0 pr-0 formNewEditSettings">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle + ': ' + sizeNameModified}}
+    </h5>
+  </div>
+  <form method="post" novalidate [formGroup]="sizeForm">
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Nombre:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <input formControlName="name" type="text" class="form-control" [class.is-invalid]="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
-                id="name">
+            id="name">
         </div>
+      </div>
+      <div *ngIf="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)" class="alert alert-danger">
+        El nombre del Tamaño es requerido.
+      </div>
+    </div>
 
-        <div *ngIf="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)" class="alert alert-danger">
-          El nombre del Tamaño es requerido.
-        </div>   
-
-        <div class="form-group">
-          <label class="custom-control custom-checkbox">
-            <input type="checkbox" formControlName="available" class="custom-control-input">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Disponible</span>
-          </label>
-        </div>
-
-        <div class="">
-          <ul class="actions" align="center">
-            <li><input [disabled]="sizeForm.invalid" type="submit" value="Aceptar" class="special" (click)="updateSize()"/></li>
-            <li><input (click)="showModalCancel(cancelTemplate)" type="button" value="Cancel" /></li>
-          </ul>
-        </div>    
-      </form>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+      <div class="row pl-2">
+        <label class="custom-control custom-checkbox">
+          <input type="checkbox" formControlName="available" class="custom-control-input">
+          <span class="custom-control-indicator"></span>
+          <span class="custom-control-description">Disponible</span>
+        </label>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="col-12">
+  <div class="col-7 offset-5">
+    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="sizeForm.invalid" (click)="updateSize()">{{saveButton}}</button>
   </div>
 </div>
