Added validation to delete tables

--- a/src/app/table/table-list/table-list.component.html
+++ b/src/app/table/table-list/table-list.component.html
@@ -16,6 +16,12 @@
   </app-error-template>
 </ng-template>
 
+<ng-template #cancelTemplate>
+  <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="delete()"
+    (handleCancelButton)="closeModal()">
+  </app-cancel-template>
+</ng-template>
+
 <!-- Grid Tables -->
 
 <div class="row">
