filtros - prueba de diseno 1

--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -21,7 +21,7 @@
 </div>
             
 <div class="ml-5 mr-5 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
-    <div class="row mb-2 customBox">
+    <div class="row mb-2 card pl-2 pr-2 pb-1 pt-1">
         <form #form="ngForm" novalidate class="form-inline">
             <h6 class="pt-2">Filtrar:</h6>
             <div class="md-form form-group mr-0 pr-0 col-lg-1 col-md-1">
