Fix angular2-grid and styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,10 @@
 					<a [routerLink]="['orders']" class="nav-link"><i class='fa fa-coffee fa-2x'></i><span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item waves-light customLi" [routerLinkActive]="['customActive']" mdbTooltip="Ventas" placement="bottom" mdbRippleRadius>
-					<a [routerLink]="['sales']" class="nav-link"><i class='fa fa-dollar fa-2x'></i></a>
+					<a [routerLink]="['sales']" class="nav-link"><i class='fa fa-dollar-sign fa-2x'></i></a>
 				</li>
 				<li class="nav-item waves-light customLi"  [routerLinkActive]="['customActive']" mdbTooltip="Restaurant" placement="bottom" mdbRippleRadius>
-					<a [routerLink]="['restaurant']" class="nav-link"><i class='fa fa-cutlery fa-2x'></i></a>
+					<a [routerLink]="['restaurant']" class="nav-link"><i class='fa fa-utensils fa-2x'></i></a>
 				</li>
 				<li class="nav-item waves-light customLi" [routerLinkActive]="['customActive']" mdbTooltip="Clientes" placement="bottom" mdbRippleRadius>
 					<a [routerLink]="['clients-module']" class="nav-link"><i class='fa fa-user-circle fa-2x'></i></a>
