--- a/src/app/table/table-list/table-list.component.html
+++ b/src/app/table/table-list/table-list.component.html
@@ -55,7 +55,7 @@
 
     <div class="fixed_collapse" mdbCollapse="isCollapsed" #fixed="bs-collapse">
         <a class="btn-floating yellow darken-1 waves-light" (click)="addBox()" mdbRippleRadius><i class="fa fa-plus"></i></a>
-        <a class="btn-floating green darken-1 waves-light" (click)="saveChanges()" mdbRippleRadius><i class="fa fa-floppy-o"></i></a>
+        <a class="btn-floating green darken-1 waves-light" (click)="saveChanges()" mdbRippleRadius><i class="fa fa-save"></i></a>
     </div>
 
 </div>
