--- a/src/app/order/order-detail/order-detail.component.html
+++ b/src/app/order/order-detail/order-detail.component.html
@@ -1,3 +1,70 @@
-<p>
-  order-detail works!
-</p>
+<!-- Form -->
+<div *ngIf='order' class="col-12 pl-0 pr-0 formNewEdit">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
+  </div>
+  <form #form="ngForm" method="post" novalidate>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-1">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Hora Inicio:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ order.created_at | date:'dd/MM/yy HH:mm' }}</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-1">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Hora Cierre:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ order.completed_at | date:'dd/MM/yy HH:mm' }}</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-1">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Estado:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ order.status }}</label>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf='order.cashRegister !== undefined' class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-1">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Caja:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ order.cashRegister.name }}</label>
+        </div>
+      </div>
+    </div>  
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pb-3">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Mesa:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <label>{{ order.table }}</label>
+        </div>
+      </div>
+    </div>  
+    
+    <div class="col-12 pr-0 pt-2 subTitle1">
+      <h5>
+        {{ 'Adiciones' | uppercase }}
+      </h5>
+    </div>
+  </form>
+</div>
